--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -7,8 +7,9 @@ icon: fa-comment
 order: 1
 ---
 <header>
-  <h2 class="alt">Hi! I'm <strong>Pediona!</strong> <br />
-  a painter based in Tirana.</h2>
+  <h2 class="alt">Hello! I am <strong>Pediona!</strong> </h2>
+  <br />
+  <h3>I am painter based in Tirana, Albania.</h3>
 </header>
 
 <footer>
