HTML and CSS partially customized

--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -1,15 +1,16 @@
 ---
-title: Intro
-cover-photo: assets/images/background.jpg
+title: Home
+cover-photo: assets/images/tiranadark.jpeg
 cover-photo-alt: example cover photo
 auto-header: none
 icon: fa-comment
 order: 1
 ---
+
 <header>
-  <h2 class="alt">Hello! I am <strong>Pediona!</strong> </h2>
+  <h2 class="alt">Hello, I'm <strong>Pediona!</strong> </h2>
   <br />
-  <h3>I am painter based in Tirana, Albania.</h3>
+  <h3>I'm painter based in Tirana.</h3>
 </header>
 
 <footer>
