--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -48,5 +48,11 @@ order: 2
           <h3>Orci Convallis</h3>
         </header>
       </div>
+      <div class="item">
+        <a href="#" class="image fit"><img src="{{ 'assets/images/pic07.jpg' | relative_url }}" alt="Orci Convallis" /></a>
+        <header>
+          <h3>Orci Convallis</h3>
+        </header>
+      </div>
     </div>
   </div>
